Archive2/e2/f528b552478f40/output
main.cpp:5:1: warning: // comments are not allowed in this language [-Wcomment]
// on GNU gcc, compile with -std=c99 or -std=gnu99
^
main.cpp:23:10: error: variable declaration in for loop is a C99-specific feature [-Werror,-Wc99-extensions]
    for (int i = 0; i < len; i++) {
         ^
1 warning and 1 error generated.
